@@ -10,3 +10,4 @@ net-retriever
 load-installer
 netcfg-static
 cdebconf-newt-udeb
+di-utils-terminfo
