@@ -15,6 +15,8 @@ debian-installer (20031030) UNRELEASED; urgency=low
   * Alastair McKinstry:
     - Add additional shade characters to fix the scroll bar in the newt
       frontend.
+    - The terminfo entries are now provided by di-utils-terminfo, not
+      the Makefile.
   * Richard Hirst:
     - Misc ia64 fixes - define KERNEL_FLAVOUR, clean up pkglists, etc
 
